# ServiceRobot

./: README.md
ATRI/: CMakeLists.txt  run.sh  words.txt
ATRI/atri/: CMakeLists.txt  atri.cpp  atri.hpp  debuglog.hpp  main.cpp  parser.cpp  parser.hpp
ATRI/example/: CMakeLists.txt  atri.cpp  atri.hpp  debuglog.hpp  main.cpp  parser.cpp  parser.hpp  words.txt
ATRI/res/: fortask.lp  vrunact.bat
Planner-release-ubuntu18/: CMakeLists.txt  run.sh  some_problem  test_score_log  words.txt
Planner-release-ubuntu18/atri/: CMakeLists.txt  atri.cpp  atri.hpp  debuglog.hpp  main.cpp  parser.cpp  parser.hpp
Planner-release-ubuntu18/doc/: FITEE.1800514.pdf:Zone.Identifier  planning_slides.pdf:Zone.Identifier
Planner-release-ubuntu18/doc/2020/: 1_2020中国服务机器人大赛服务机器人-仿真项目赛程.docx
Planner-release-ubuntu18/example/: CMakeLists.txt  devil.cpp  devil.hpp  main.cpp
Planner-release-ubuntu18/include/cserver/: grader.hpp  message.hpp  param.hpp  plug.hpp  xmllabel.hpp
Planner-release-ubuntu18/res/: iclingo.win  vruntask.bat
Planner-release-ubuntu18/src/: CMakeLists.txt  aspgrader.cpp  aspgrader.hpp  evaluate.cpp  evaluate.h  main.cpp  message.cpp  param.cpp  platform.hpp  plug.cpp  xmllabel.cpp
Planner-release-ubuntu18/src/sfsexp/: faststack.c
Planner-release-ubuntu18/tests/example/: 01.xml  02.xml  04.xml  08.xml  09.xml  11.xml  12.xml  14.xml  15.xml  16.xml  17.xml  19.xml  20.xml  22.xml  23.xml  24.xml  25.xml  27.xml  28.xml  29.xml  30.xml  32.xml  33.xml  36.xml  37.xml  38.xml  39.xml  40.xml  44.xml  45.xml  46.xml  47.xml  48.xml  49.xml  test.list
Planner-release-ubuntu18/tests/problems/IT/stage1/: 01.xml  07.xml  08.xml  10.xml  12.xml  18.xml  31.xml  32.xml  35.xml  40.xml  43.xml  49.xml
Planner-release-ubuntu18/tests/problems/IT/stage2/: 01.xml  07.xml  08.xml  09.xml  15.xml  18.xml  19.xml  20.xml  21.xml  22.xml  23.xml  25.xml  26.xml  27.xml  29.xml  30.xml  34.xml  38.xml  40.xml  42.xml  44.xml  45.xml  48.xml  49.xml  50.xml
Planner-release-ubuntu18/tests/problems/NT/stage1/: 54.xml  55.xml  66.xml  68.xml  71.xml  74.xml  78.xml  80.xml  82.xml  83.xml  84.xml  87.xml  88.xml  90.xml  91.xml  93.xml  94.xml  95.xml  98.xml  99.xml
Planner-release-ubuntu18/tests/problems/NT/stage2/: 50.xml  51.xml  53.xml  56.xml  57.xml  58.xml  60.xml  65.xml  67.xml  69.xml  70.xml  72.xml  74.xml  77.xml  79.xml  80.xml  85.xml  86.xml  89.xml  90.xml  91.xml  92.xml  94.xml  95.xml  98.xml  test.list
Planner-release-ubuntu18/tests/problems1/IT/stage1/: 01.xml  02.xml  03.xml  04.xml  05.xml  06.xml  07.xml  09.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  17.xml  19.xml  22.xml  25.xml  26.xml  27.xml  28.xml  30.xml  31.xml  32.xml  33.xml  34.xml  36.xml  38.xml  39.xml  40.xml  41.xml  42.xml  43.xml  46.xml  47.xml  48.xml  49.xml  50.xml  test.list
Planner-release-ubuntu18/tests/problems1/IT/stage2/: 01.xml  02.xml  03.xml  04.xml  05.xml  06.xml  07.xml  08.xml  10.xml  11.xml  13.xml  15.xml  16.xml  17.xml  20.xml  21.xml  22.xml  23.xml  24.xml  26.xml  27.xml  30.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  40.xml  42.xml  43.xml  44.xml  45.xml  46.xml  47.xml  48.xml  50.xml
Planner-release-ubuntu18/tests/problems1/NT/stage1/: 02.xml  03.xml  04.xml  06.xml  07.xml  08.xml  09.xml  10.xml  12.xml  13.xml  15.xml  16.xml  18.xml  20.xml  21.xml  22.xml  23.xml  24.xml  27.xml  29.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  40.xml  41.xml  42.xml  44.xml  45.xml  46.xml  47.xml  48.xml  49.xml
Planner-release-ubuntu18/tests/problems1/NT/stage2/: 01.xml  02.xml  03.xml  04.xml  05.xml  06.xml  08.xml  09.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  30.xml  31.xml  32.xml  33.xml  36.xml  38.xml  41.xml  42.xml  43.xml  44.xml  46.xml  47.xml  49.xml  50.xml
Planner-release-ubuntu18/tests/problems2/IT/stage1/stage1/: 03.xml  14.xml  15.xml  17.xml  21.xml  23.xml  25.xml  29.xml  34.xml  41.xml
Planner-release-ubuntu18/tools/gen_tests/: CMakeLists.txt  cserver  evaluelog.txt  main.cpp  testDevil.lp  tests_generator.py  testvas_error.txt  testvcons.lp  testvruntask.sh  vas_error.txt  vcons.lp  vrunact.sh  vstate.lp  vtask.lp
Planner-release-ubuntu18/tools/validate_tests/: testkill.bat  testshow.lp
parser/: CMakeLists.txt  parser.cpp  parser.hpp  words.txt
(+440 files in other folders)
